@@ -2,7 +2,15 @@ package com.team01.freelance.contract.service;
 
 import com.team01.freelance.contract.dto.FreelancerPerformanceDTO;
 import com.team01.freelance.contract.dto.StalledContractDTO;
+import com.team01.freelance.contract.feign.JobServiceClient;
+import com.team01.freelance.contract.feign.UserServiceClient;
+import com.team01.freelance.contract.model.Contract;
+import com.team01.freelance.contract.model.ContractStatus;
 import com.team01.freelance.contract.repository.ContractRepository;
+import com.team01.freelance.job.model.Job;
+import com.team01.freelance.user.model.User;
+import feign.FeignException;
+import feign.Request;
 import jakarta.persistence.EntityNotFoundException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -11,10 +19,10 @@ import org.springframework.test.util.ReflectionTestUtils;
 import javax.sql.DataSource;
 import java.sql.Connection;
 import java.sql.DatabaseMetaData;
-import java.util.Collections;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -28,12 +36,18 @@ class ContractServiceF789Test {
 
     private ContractService contractService;
     private ContractRepository contractRepository;
+    private UserServiceClient userServiceClient;
+    private JobServiceClient jobServiceClient;
 
     @BeforeEach
     void setUp() throws Exception {
         contractService = new ContractService();
         contractRepository = mock(ContractRepository.class);
+        userServiceClient = mock(UserServiceClient.class);
+        jobServiceClient = mock(JobServiceClient.class);
         ReflectionTestUtils.setField(contractService, "contractRepository", contractRepository);
+        ReflectionTestUtils.setField(contractService, "userServiceClient", userServiceClient);
+        ReflectionTestUtils.setField(contractService, "jobServiceClient", jobServiceClient);
         DataSource dataSource = mock(DataSource.class);
         Connection connection = mock(Connection.class);
         DatabaseMetaData metaData = mock(DatabaseMetaData.class);
@@ -57,7 +71,7 @@ class ContractServiceF789Test {
 
     @Test
     void freelancerSummaryReturnsExpectedValues() {
-        when(contractRepository.freelancerExists(10L)).thenReturn(true);
+        when(userServiceClient.getUser(10L)).thenReturn(new User());
         when(contractRepository.getFreelancerPerformance(eq(10L), any(LocalDateTime.class), any(LocalDateTime.class)))
                 .thenReturn(new Object[]{5L, 4L, 7000.0, 1400.0, 17.5});
 
@@ -77,7 +91,7 @@ class ContractServiceF789Test {
 
     @Test
     void freelancerSummaryThrowsWhenFreelancerMissing() {
-        when(contractRepository.freelancerExists(999L)).thenReturn(false);
+        when(userServiceClient.getUser(999L)).thenThrow(notFound());
 
         assertThrows(EntityNotFoundException.class, () ->
                 contractService.getFreelancerPerformanceSummary(
@@ -90,8 +104,22 @@ class ContractServiceF789Test {
 
     @Test
     void stalledContractsAreMappedToDto() {
+        Contract contract = new Contract();
+        contract.setId(1L);
+        contract.setFreelancerId(10L);
+        contract.setJobId(20L);
+        contract.setAgreedAmount(1000.0);
+        contract.setStatus(ContractStatus.ACTIVE);
+        contract.setCreatedAt(LocalDateTime.now().minusDays(30));
+        contract.setMetadata(Map.of("progressPercentage", 10.0, "lastActivityDate", LocalDateTime.now().minusDays(30).toString()));
+        User user = new User();
+        user.setName("Freelancer A");
+        Job job = new Job();
+        job.setTitle("Job A");
         when(contractRepository.findStalledContracts(50.0, 7))
-                .thenReturn(Collections.singletonList(new Object[]{1L, "Freelancer A", "Job A", 1000.0, 10.0, 30L}));
+                .thenReturn(List.of(contract));
+        when(userServiceClient.getUser(10L)).thenReturn(user);
+        when(jobServiceClient.getJob(20L)).thenReturn(job);
 
         List<StalledContractDTO> result = contractService.findStalledContracts(50.0, 7);
 
@@ -102,5 +130,10 @@ class ContractServiceF789Test {
         assertEquals(1000.0, result.getFirst().getAgreedAmount());
         assertEquals(10.0, result.getFirst().getProgressPercentage());
         assertEquals(30L, result.getFirst().getDaysSinceLastActivity());
+    }
+
+    private FeignException.NotFound notFound() {
+        Request request = Request.create(Request.HttpMethod.GET, "/api/users/999", Map.of(), null, null, null);
+        return new FeignException.NotFound("missing", request, null, Map.of());
     }
 }
